trying to fix footer to bottom on iphone

--- a/main.css
+++ b/main.css
@@ -159,6 +159,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 
 .social-icons {
